# tiktok-sequencia

./: .gitignore  Dockerfile  README.md  cookies.pkl  main.py  paths.py  pyproject.toml  requirements.txt  sendmessage.py
.github/workflows/: build.yml
config/: paths.py
config.bak/: __init__.py  flags.py
