[project]
name = "tiktok-sequencia"
version = "0.1.0"
description = "A script that lets you set the TikTok's chat fire ON using Python code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["cloakbrowser>=0.3.18", "notify-py>=0.3.43", "pynput>=1.8.1"]

[dependency-groups]
build = ["nuitka[onefile]>=4.0.6"]
